# tagless-final-parsing

./: .gitignore  README.md  cabal.project  flake.nix
.githooks/: pre-commit
initial-encoding/: initial-encoding.cabal
initial-encoding/app/: Main.hs
initial-encoding/src/: Parser.hs
initial-encoding/src/Parser/: Initial.hs
initial-encoding/test/Test/: ParserTest.hs
initial-encoding/test/Test/Parser/: InitialTest.hs
leibniz-proof/: leibniz-proof.cabal
leibniz-proof/app/: Main.hs
parser-adt/: parser-adt.cabal
parser-adt/app/: Main.hs
parser-closed/: parser-closed.cabal
parser-closed/app/: Main.hs
parser-gadt/: parser-gadt.cabal
parser-gadt/app/: Main.hs
parser-initial/: parser-initial.cabal
parser-initial/app/: Main.hs
parser-initial/src/: Parser.hs
parser-initial/test/Test/: ParserTest.hs
parser-utils/: parser-utils.cabal
parser-utils/src/Parser/: Utils.hs
tagless-final/: tagless-final.cabal
tagless-final/app/: Main.hs
tagless-final/src/Closed/: Parser.hs
tagless-final/src/Parser/: Final.hs
tagless-final/src/Parser/Tagless/: Closed.hs
tagless-final/test/Test/Parser/: FinalTest.hs
tagless-final/test/Test/Parser/Tagless/: ClosedTest.hs
