  cabal-version:      3.4
  name:               initial-encoding
  version:            0.1.0.0

executable parser-initial
  main-is:            Main.hs
  build-depends:      base ^>=4.14.3.0,
                      initial-encoding,
                      megaparsec,
                      mtl,
                      optparse-applicative,
                      text,
  hs-source-dirs:     app
  default-language:   Haskell2010

library
  build-depends:      base ^>=4.14.3.0,
                      deepseq,
                      megaparsec,
                      mtl,
                      parser-combinators,
                      text,
                      transformers,
                      transformers-either
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Parser

test-suite parser-initial-test
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.14.3.0,
                      HUnit,
                      hspec,
                      initial-encoding,
                      megaparsec,
                      tasty,
                      tasty-discover,
                      tasty-hspec,
                      text
  other-modules:      Test.ParserTest
