  cabal-version:      3.4
  name:               parser-adt
  version:            0.1.0.0

executable parser-adt
  main-is:            Main.hs
  build-depends:      base ^>=4.14.3.0,
                      deepseq,
                      megaparsec,
                      mtl,
                      parser-combinators,
                      text,
                      transformers,
                      transformers-either
  hs-source-dirs:     app
  default-language:   Haskell2010
