  cabal-version:      3.4
  name:               parser-closed
  version:            0.1.0.0

executable parser-closed
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0,
                    eq,
                    megaparsec,
                    parser-combinators,
                    text
  hs-source-dirs:   app
  default-language: Haskell2010
