  cabal-version:      3.4
  name:               tagless-final
  version:            0.1.0.0

executable tagless-final
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0,
                    megaparsec,
                    tagless-final,
                    text
  hs-source-dirs:   app
  default-language: Haskell2010

library
  build-depends:      base ^>=4.14.3.0,
                      eq,
                      megaparsec,
                      parser-combinators,
                      text
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Closed.Parser
