  cabal-version:      3.4
  name:               tagless-final
  version:            0.1.0.0

executable tagless-final
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0,
                    megaparsec,
                    optparse-applicative,
                    tagless-final,
                    text
  hs-source-dirs:   app
  default-language: Haskell2010

library
  build-depends:      base ^>=4.14.3.0,
                      deepseq,
                      eq,
                      megaparsec,
                      mtl,
                      parser-combinators,
                      parser-utils,
                      text
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Parser.Final

test-suite tagless-final-test
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.14.3.0,
                      HUnit,
                      hspec,
                      megaparsec,
                      parser-utils,
                      tagless-final,
                      tasty,
                      tasty-discover,
                      tasty-hspec,
                      text
  other-modules:      Test.Parser.FinalTest
